<resources>
    <string name="superuser">Superuser</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="status_incoming">Incoming Superuser Request...</string>
    <string name="unknown_uid">Unknown UID: %s</string>
    <string name="application_request">%s is requesting Superuser access.</string>
    <string name="info">Warning: If you do not understand this, you should deny the request.</string>
    <string name="request">Superuser Request</string>
    <string name="package_header">Package:</string>
    <string name="app_header">App:</string>
    <string name="uid_header">Requested UID:</string>
    <string name="command_header">Command:</string>
    <string name="this_time_only">This time only</string>
    <string name="remember_for">Remember choice for %s minutes</string>
    <string name="remember_forever">Remember choice forever</string>
    <string name="interactive">Interactive</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="no_logs">No Logs</string>
    <string name="no_apps">There are currently no Superuser app policies.</string>
    <string name="logging">Logging</string>
    <string name="logging_summary">Enable or disable all Superuser request logging</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="pin_protection_summary">Require entry of a PIN to approve Superuser requests</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="request_timeout_summary">Superuser requests will time out and be denied after %s seconds</string>
    <string name="notifications">Notifications</string>
    <string name="none">None</string>
    <string name="notifications_summary">A %s will be shown when an app is granted or denied Superuser permissions</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_mismatch">PIN did not match</string>
    <string name="pin_set">Superuser PIN protection enabled</string>
    <string name="number_seconds">%s seconds</string>
    <string name="superuser_granted">Superuser granted to %s</string>
    <string name="superuser_denied">Superuser denied to %s</string>
    <string name="toast">Toast</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No notification will be shown</string>
    <string name="developer_warning">"Developer Warning:
android.permission.ACCESS_SUPERUSER
not declared in manifest."</string>
    <string name="superuser_description">full permissions to all device features and storage</string>
    <string name="superuser_description_more">Superuser grants full access to all device features and storage, including the secure and sensitive hardware elements of your device. This permission is potentially dangerous.</string>
    <string name="declared_permission">Declared Permission</string>
    <string name="declared_permission_summary">Only allow requests from apps that declare android.permission.ACCESS_SUPERUSER</string>
    <string name="automatic_response">Automatic Response</string>
    <string name="prompt">Prompt</string>
    <string name="automatic_response_allow_summary">Automatically allow new requests</string>
    <string name="automatic_response_deny_summary">Automatically deny new requests</string>
    <string name="automatic_response_prompt_summary">Show confirmation dialog for new requests</string>
    <string name="security">Security</string>
    <string name="multiuser_policy">Multiuser Policy</string>
    <string name="multiuser_owner_only_summary">Only the device owner can request Superuser</string>
    <string name="multiuser_owner_managed_summary">The device owner will be prompted when another user requests Superuser</string>
    <string name="multiuser_user_summary">All users can request Superuser</string>
    <string name="multiuser_owner_only">Owner Only</string>
    <string name="multiuser_owner_managed">Owner Managed</string>
    <string name="multiuser_user">All Users</string>
    <string name="multiuser_require_owner">The Multiuser Policy can only be managed by the device owner.</string>
    <string name="owner_login_info">Please switch to the owner account to approve or deny this request.</string>
    <string name="all_commands">All Commands</string>
    <string name="about">About</string>
    <string name="apps">Apps</string>
    <string name="installing">Installing</string>
    <string name="installing_superuser">Installing Superuser...</string>
    <string name="install_superuser">Install Superuser</string>
    <string name="install_superuser_info">"The Superuser binary (su) must be updated.

Please choose an installation method.
Recovery mode installation is recommended for HTC devices."</string>
    <string name="recovery_install">Recovery Install</string>
    <string name="install">Install</string>
    <string name="checking_superuser">Checking Superuser...</string>
    <string name="install_error">There was an error installing Superuser. Please send a log of the error to the developer.</string>
    <string name="install_success">Installation of Superuser was successful.</string>
    <string name="su_binary_outdated">The su binary is out of date.</string>
    <string name="superuser_access">Superuser Access</string>
    <string name="disabled">Disabled</string>
    <string name="apps_only">Apps only</string>
    <string name="adb_only">ADB only</string>
    <string name="apps_and_adb">Apps and ADB</string>
    <string name="whats_new">"What's New"</string>
    <string name="rate">Rate</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="pin_disabled">Superuser PIN protection disabled</string>
    <string name="bluetooth_mas_request">Message Access request</string>
    <string name="bluetooth_mas_acceptance_dialog_text">%1$s would like to access your messages. Give access to %2$s?</string>
    <string name="bluetooth_mas_remember_choice">"Don't ask again"</string>
    <string name="lock_pattern_size_3">3x3</string>
    <string name="lock_pattern_size_4">4x4</string>
    <string name="lock_pattern_size_5">5x5</string>
    <string name="lock_pattern_size_6">6x6</string>
    <string name="wifi_mode">Mode</string>
    <string name="wifi_mode_ibss">Ad-Hoc (IBSS) Network</string>
    <string name="wifi_mode_ibss_short">Ad-Hoc</string>
    <string name="wifi_setting_countrycode_title">Wi-Fi region code</string>
    <string name="wifi_setting_countrycode_summary">Specify the region code for Wi-Fi</string>
    <string name="wifi_setting_countrycode_error">There was a problem setting the region code.</string>
    <string name="wifi_setting_priority_title">Wi-Fi priority</string>
    <string name="wifi_setting_priority_summary">Specify the priority of the Wi-Fi networks</string>
    <string name="volume_adjust_sounds_enable_title">Volume adjustment sound</string>
    <string name="volume_adjust_sounds_enable_summary">Play sound when adjusting volume with volume rocker</string>
    <string name="lockpattern_settings_enable_error_path_title">Show pattern error</string>
    <string name="lockpattern_settings_enable_dots_title">Show pattern dots</string>
    <string name="root_access">Root access</string>
    <string name="root_access_warning_title">Allow root access?</string>
    <string name="root_access_warning_message">Allowing applications to request root access is very dangerous and could compromise the security of your system!</string>
    <string name="root_access_none">Disabled</string>
    <string name="root_access_apps">Apps only</string>
    <string name="root_access_adb">ADB only</string>
    <string name="root_access_all">Apps and ADB</string>
    <string name="accessibility_home_button_answers_call_prerefence_title">Home button answers call</string>
    <string name="headset_category_title">Headset</string>
    <string name="ok">OK</string>
    <string name="quiet_hours_title">Quiet hours</string>
    <string name="quiet_hours_summary">Configure the hours the device should be quiet</string>
    <string name="quiet_hours_note_title">Note</string>
    <string name="quiet_hours_note_summary">Incoming calls will behave like usual during quiet hours</string>
    <string name="quiet_hours_enabled">Enable quiet hours</string>
    <string name="quiet_hours_enabled_on">Quiet hours will be enforced</string>
    <string name="quiet_hours_enabled_off">Notifications will function as normal</string>
    <string name="quiet_hours_start">Start of quiet hours</string>
    <string name="quiet_hours_start_summary">When to start enforcing quiet hours</string>
    <string name="quiet_hours_end">End of quiet hours</string>
    <string name="quiet_hours_end_summary">When to stop enforcing quiet hours</string>
    <string name="quiet_hours_mute">Mute notifications</string>
    <string name="quiet_hours_mute_on">No sounds will be played</string>
    <string name="quiet_hours_mute_off">Sounds will play like normal</string>
    <string name="quiet_hours_still">Disable vibrations</string>
    <string name="quiet_hours_still_on">Device will not vibrate</string>
    <string name="quiet_hours_still_off">Device will vibrate normally</string>
    <string name="quiet_hours_dim">Disable notification light</string>
    <string name="quiet_hours_dim_on">Notification light will be disabled</string>
    <string name="quiet_hours_dim_off">Notification light will function as normal</string>
    <string name="quiet_hours_haptic">Disable haptic feedback</string>
    <string name="quiet_hours_haptic_on">Haptic feedback will be disabled</string>
    <string name="quiet_hours_haptic_off">Haptic feedback will function as normal</string>
    <string name="quiet_hours_active_from">Active from</string>
    <string name="quiet_hours_active_to">to</string>
    <string name="start_time_title">Start</string>
    <string name="end_time_title">End</string>
    <string name="notification_convert_sound_to_vibration_title">Vibrate on notification</string>
    <string name="system_interface_title">System interface</string>
    <string name="notification_drawer_title">Notification drawer</string>
    <string name="notification_pulse_title">Notification light</string>
    <string name="battery_light_title">Battery light</string>
    <string name="hardware_keys_title">Hardware keys</string>
    <string name="navigation_bar_title">Buttons and layout</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="status_bar_title">Status bar</string>
    <string name="quick_settings_panel_title">Quick Settings panel</string>
    <string name="lock_clock_title">Clock widget</string>
    <string name="lock_clock_summary">"View or change how the 'cLock' Home and Lock screen widgets will display"</string>
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navigation_ring_title">Quick launch shortcuts</string>
    <string name="pie_control_title">Pie controls</string>
    <string name="partition_info_title">Partition info</string>
    <string name="partition_info_system">/system</string>
    <string name="partition_info_data">/data</string>
    <string name="partition_info_cache">/cache</string>
    <string name="partition_info_sdcard">/sdcard (FAT)</string>
    <string name="partition_info_sdext">/sd-ext (EXT)</string>
    <string name="show_navbar">Show navigation bar</string>
    <string name="show_navbar_reboot">Requires a restart</string>
    <string name="status_unavailable">Unavailable</string>
</resources>